# Deskling

./: .eslintrc.js  .eslintrc.json  .gitignore  AGENTS.md  DELIVERY_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MERGE_RESOLUTION.md  MVP_IMPLEMENTATION.md  QUICKSTART.md  README.md  ROADMAP.md  RUST_IMPLEMENTATION.md  deploy.sh  package-lock.json  package.json  setup-deps.sh  verify.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  pr-demo-screenshots.yml  webpack.yml
apps/desktop-ui/: README-CHARACTER.md  README.md  index.html  main-character.js  main.js  package.json  test-character.js  vite.config.js
apps/desktop-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-ui/src-tauri/src/: main.rs
apps/ipc-hub/: README.md  __init__.py  main.py  requirements.txt  server.py
configs/: default.toml  permissions.toml
deskling-character/: .gitignore  Cargo.toml  README.md  demo.sh  verify.sh
deskling-character/src/: main.rs
docs/: CHARACTER_VISUAL_GUIDE.md  PR_SCREENSHOT_REQUIREMENT.md  VISUAL_REFERENCE.md  character-preview.html  rust-character-demo.html  rust-demo-live.html
scripts/: build-all.sh  capture_demo.py  capture_screenshots.sh  check_schemas.py  check_tauri_overlay.py  dev-up.sh  resume_update.sh  test_ipc.py  typed_chat_smoke.py  upload_resume.sh
services/agent-core/: README.md  __init__.py  contract.py  main.py  (+3 more)
shared/: __init__.py  ipc_client.py  logging_utils.py  requirements.txt
specs/: README.md  architecture.md  ipc_protocol.md  logging_conventions.md  mvp_scope.md  project_scope.md  stickman_mvp.md  tokenomics.md  tool_system.md
(+59 files in other folders)
