[package]
name = "desktop_ui"
version = "0.1.0"
description = "TaskSprite desktop shell"
authors = ["TaskSprite"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0" }

[dependencies]
tauri = { version = "2.0.0", features = [] }

[[bin]]
name = "desktop-ui"
path = "src/main.rs"
